--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12"
   }
 }
